<!--
    Copyright (C) 2014 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:visible="false"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/find"
        android:title="@string/find"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/replace"
        android:title="@string/replace"
        android:icon="@drawable/ic_baseline_content_copy_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/syntax_highlight"
        android:title="@string/syntax_highlight"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/fold_all"
        android:title="@string/fold_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/unfold_all"
        android:title="@string/unfold_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/git_history"
        android:title="@string/git_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/git_diff"
        android:title="@string/git_diff"
        app:showAsAction="never" />
    <item
        android:id="@+id/details"
        android:title="@string/details"
        app:showAsAction="never" />
    <item
        android:id="@+id/openwith"
        android:title="@string/open_with" />
    <item
        android:id="@+id/monofont"
        android:title="@string/monofont"
        android:checkable="true"
        app:showAsAction="never" />
</menu>
