<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2026 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>,
    Emmanuel Messulam<emmanuelbendavid@gmail.com>, Raymond Lai <airwave209gt at gmail.com> and Contributors.

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_font_increase"
        android:title="@string/terminal_font_increase"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_font_decrease"
        android:title="@string/terminal_font_decrease"
        android:icon="@drawable/ic_close_white_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/terminal_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_close_tab"
        android:title="@string/terminal_close_tab"
        app:showAsAction="never" />

    <item
        android:title="@string/terminal_theme"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_theme_dark"
                android:title="@string/terminal_theme_dark" />
            <item
                android:id="@+id/action_theme_light"
                android:title="@string/terminal_theme_light" />
            <item
                android:id="@+id/action_theme_black"
                android:title="@string/terminal_theme_black" />
        </menu>
    </item>

    <item
        android:id="@+id/action_toggle_root"
        android:title="@string/terminal_toggle_root"
        android:checkable="true"
        app:showAsAction="never" />

</menu>
