<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2026 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_file"
        android:title="@string/open"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_buffer_size"
        android:title="@string/buffer_size_title"
        app:showAsAction="never" />

</menu>
